--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,4 +1,8 @@
-[[_redirects]]
+[build]
+    command = "npm run build"
+    publish = "/build"
+    base = "/"
+[[redirects]]
 from = "/*"
 to = "/index.html"
 status =200
