--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,7 +1,7 @@
 [build]
     command = "npm run build"
-    publish = "/build"
-    base = "/"
+    publish = "/frontend"
+    base = "/frontend"
 [[redirects]]
 from = "/*"
 to = "/index.html"
